crates/lang/macro/tests/ui/trait_def/fail/message_receiver_invalid_2.stderr
error: missing or malformed `&self` or `&mut self` receiver for ink! message
 --> $DIR/message_receiver_invalid_2.rs:6:5
  |
6 |     fn message(this: Self);
  |     ^^^^^^^^^^^^^^^^^^^^^^
